# BoxOfPorts

./: .env  .env.example  .gitignore  CHANGELOG.md  CLEANUP_COMPLETE.md  DEPLOYMENT.md  DISTRIBUTION_SUMMARY.md  DOCKER_HUB_SETUP.md  Dockerfile  Dockerfile.bak  GITHUB_DESCRIPTION.md  INBOX_DOCUMENTATION.md  INBOX_IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  Makefile.bak  README.md  README.md.bak  TEST_SUMMARY.md  USAGE_GUIDE.md  WARP.md  bop  boxofports-dev  docker-compose.yml  docker-entrypoint.sh  ejoinctl.db  ejoinctl_application_prompt.md  install-dev.sh  install-system.sh  install-user.sh  install.ps1  install.sh  pyproject.toml  salida.json  salida.txt  server_access.csv  splash.py  test_table_export.py  version_registry.json
.github/workflows/: auto-bump-version.yml  bump-version.yml  debug-test.yml  docker-publish.yml  promote-any-to-stable.yml  promote-stable.yml  publish-on-tag-2.yml  publish-on-tag.yml  release.yml  version-lint.yml
boxofports/: __init__.py  __main__.py  __version__.py  api_models.py  cli.py  config.py  csv_port_parser.py  http.py  imei_import.py  inbox.py  ports.py  splash.py  store.py  table_export.py  templating.py
docker/: bop
docs/: COMPLETION.md  COMPREHENSIVE-VERSIONING-AND-DISTRIBUTION.md  CSV_PORT_SUPPORT.md  DISTRIBUTION.md  README.md  ROLLBACK.md  VERSIONING.md  WHY_BOXOFPORTS.md
docs/deployment/: DEPLOYMENT.md  DISTRIBUTION_SUMMARY.md
docs/dev/: CLI_INVOCATION_STRATEGY.md  CONSISTENCY_CHANGES.md  IMPLEMENTATION_SUMMARY.md
docs/development/: FINAL_REBRAND_FIXES.md  INBOX_IMPLEMENTATION_SUMMARY.md  REBRAND_SUMMARY.md  TEST_SUMMARY.md  ejoinctl_application_prompt.md
docs/usage/: GUI_OPERATORS_GUIDE.md  INBOX_DOCUMENTATION.md  USAGE_GUIDE.md  _USAGE_GUIDE.md
ejoinctl/: __init__.py  __main__.py  api_models.py  cli.py  config.py  http.py  inbox.py  templating.py
scripts/: bop  bop-completion.bash  boxofports-completion.bash  install-bop.sh  retag_by_digest.sh  test-completion.sh  uninstall-bop.sh  update_version_registry.py  version_status.py  version_sync.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_csv_port_parser.py  test_ports.py  test_sorting.py  test_storage.py  test_templating.py  test_templating_simple.py
